# wings3

./: .gitignore  2DLedGridSimulator.py  LICENSE  Makefile  README.md  SocketWriter.py  analogInput.cpp  blendTest.py  diagram.dot  effectController.cpp  effectController.h  graphics.cpp  graphics.h  leds.cpp  leds.h  microphone.cpp  microphone.h  movementDetection.cpp  movementDetection.h  movementDetectionMlc.h  palettes.h  palettesMinimal.h  palleteGenerator.py  pyproject.toml  remotecodes.md  run.py  screenMaps.h  screenMaps.txt  serial.cpp  serial.h  settings.h  temp.txt  time.cpp  todo.md  transformMaps.h  wings3.ino  wings3.py
.VSCodeCounter/2023-04-30_02-51-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-06-12_21-39-23/: details.md  diff.md  (+6 more)
Configuration/: configuration.py
PythonScripts/: blendTest.py  bottom.py  configuration.py  createShimmerList.py  defineBottomLeds.py  directionMapGenerator.py  effectCopier.py  imagePaletteExtractor.py  palleteGenerator.py  screenMapGenerator.py  squareRootTest.py  temp.txt  temp2.txt  testing.py  transformGenerator.py  transformMapsHeaderGenerator.py
ScreenMaps/: example.pdn
src/: commonHeaders.h  settings.h
tests/: 2DLedGridSimulator.py  ConfigurationStatusWindow.py  FakeMicrophone.cpp  FakeMicrophone.py  LedGridWindow.py  MetricGraphWindow.py  RemoteControlWindow.py  SimpleWindow.py  SocketReader.cpp  SocketReader.h  TestRunner.cpp  Tester.py  socketRemoteControl.cpp  socketRemoteControl.h  testLeds.cpp  testLeds.h  testMicrophone.cpp
(+169 files in other folders)
