[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Little Fire <littlegreenfire@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.14"
numpy = "^1.26.2"
psutil = "^5.9.7"
matplotlib = "^3.8.2"

[tool.poetry.scripts]
sim = "src.windows.simulator:main"
simulator = "src.windows.simulator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"